# gpu-api

./: .gitignore  Cargo.toml  README.md  commands.txt
gpu-api/: Cargo.toml
gpu-api-dto/: Cargo.toml
gpu-api-dto/src/: lib.rs
gpu-api-relay/: Cargo.toml
gpu-api-relay/src/: frame.rs  frustum.rs  lib.rs  model_bindless.rs
gpu-api-test-app/: Cargo.toml
gpu-api-test-app/src/: element.rs  main.rs
gpu-api/src/: camera.rs  frame_counter.rs  instance.rs  lib.rs  model.rs  model_instance.rs  object_picking.rs  pipeline.rs  shader.wgsl  texture.rs
gpu-api/src/pipeline/: element.wgsl  element_pipeline.rs  gradient_quad_pipeline.rs  image_pipeline.rs  line_pipeline.rs  model.wgsl  model_bindless_piepeline.rs  model_bindless_pipeline.rs  model_pipeline.rs  quad.rs  quad.wgsl  quad_pipeline.rs  solid_quad_pipeline.rs
gpu-api/src/pipeline/model_pipeline/: model.rs  model_instance.rs
gpu-api/src/pipeline/model_pipeline/shaders/: model.wgsl
gpu-api/src/pipeline/quad_pipeline/shaders/: solid.wgsl
gpu-api/src/pipeline/shaders/: culling.wgsl  gradient.wgsl  image.wgsl  line.wgsl  model.wgsl  model_bindless.wgsl  quad.wgsl  rig_baking.wgsl  solid.wgsl
model-data/: Cargo.toml
model-data/src/: main.rs  model_load.rs
model-load/: Cargo.toml
model-load/src/: lib.rs  material.rs
model-utils/: Cargo.toml
model-utils/src/: main.rs
models/animated-cube/: animated-cube.gltf
models/box/: box.glb
models/overlord/: overlord.gltf
models/plane/: plane.gltf
models/skin-test/: skin-test.glb
test-app/: Cargo.toml
test-app-gpu-api/: Cargo.toml
test-app-gpu-api/src/: main.rs
test-app/src/: element.rs  main.rs  model_load.rs
test-server/: Cargo.toml
test-server-gpu-api/: Cargo.toml
test-server/src/: main.rs
