[package]
name = "gpu-api-test-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "*"
env_logger = "*"
serde_json = "*"
tokio = { version = "*", features = ["rt-multi-thread"] }
winit = "*"
gltf = "*"
gpu-api = { path = "../gpu-api" }
