[package]
name = "gpu-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "*"
bytemuck = "*"
bytemuck_derive = "*"
serde = "*"
serde_derive = "*"
image = { version = "*", default-features = false, features = ["png", "jpeg"] }
glam = "*"
lz4_flex = "*"
wgpu = "*"
ktx2 = "*"
gpu-api-dto = { path = "../gpu-api-dto" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "*"