[package]
name = "gpu-api"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "*"
serde = "*"
serde_derive = "*"
glam = "*"
wgpu = "*"
ktx2 = "*"
gpu-api-dto = { path = "../gpu-api-dto" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "*"
