[package]
name = "model-load"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "*"
gltf = { version = "*", features = ["KHR_materials_pbrSpecularGlossiness"] }
gpu-api = { path = "../gpu-api" }
